--- a/src/index.css
+++ b/src/index.css
@@ -227,10 +227,6 @@ input.error {
   margin-top: 0.5rem;
 }
 
-.form {
-  display: flex;
-}
-
 .copy-btn {
   text-transform: uppercase;
   padding: 0.6rem;
@@ -262,4 +258,18 @@ article {
 
 .copied {
   opacity: 1;
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
+}
+
+@media screen and (max-width: 460px) {
+  .form {
+    flex-direction: column;
+  }
+  input::placeholder {
+    font-size: 0.65rem;
+  }
 }
