--- a/src/index.css
+++ b/src/index.css
@@ -190,8 +190,14 @@ input:focus {
   .btn {
     font-size: 0.85rem;
   }
-
 }
+
+@media screen and (min-width:1000px){
+  .notification-container {
+    top: 0;
+  }
+}
+
 input.error {
   border: 2px solid var(--clr-red-dark);
 }
