--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,7 @@ input:focus {
   }
 }
 
-@media screen and (min-width:1000px){
+@media screen and (max-width: 800px) {
   .notification-container {
     bottom: 20px;
   }
